K8s/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-api
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
